--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -44,19 +44,19 @@ nav{
     width: 100%;
     height: 10%;
     display: inline;
-    
+
 }
 
 nav ul{
     text-align: center;
     font-size:25px;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 nav ul li{
     display: inline;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 5%;
+
     
 }
 
@@ -100,61 +100,70 @@ Projects
 ***********/
 
 .container {
-    display: flex;
-    width: 90vw;
-    margin-left: 20px;
+  display: flex;
+  width: 90vw;
+  margin-left: 20px;
+}
+
+.panel {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh;
+  border-radius: 50px;
+  color: #000;
+  cursor: pointer;
+  flex: 0.5;
+  margin: 10px;
+  position: relative;
+  -webkit-transition: all 700ms ease-in;
+
+}
+
+.panel h3 {
+  font-size: 35px;
+  font-weight: 100;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
+}
+
+.panel h3 a:visited{
+  color: rgb(255, 255, 255);
+}
+.panel.active {
+  flex: 5;
+}
+
+.panel.active h3 {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
+}
+
+
+@media (max-width: 480px) {
+  .container {
+    width: 100vw;
   }
-  
-  .panel {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 80vh;
-    border-radius: 50px;
-    color: #000;
-    cursor: pointer;
-    flex: 0.5;
-    margin: 10px;
-    position: relative;
-    -webkit-transition: all 700ms ease-in;
+
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none;
   }
-  
-  .panel h3 {
-    font-size: 35px;
-    font-weight: 100;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    opacity: 0;
-  }
-  
-  .panel h3 a:visited{
-    color: rgb(255, 255, 255);
-  }
-  .panel.active {
-    flex: 5;
-  }
-  
-  .panel.active h3 {
-    opacity: 1;
-    transition: opacity 0.3s ease-in 0.4s;
-  }
-  
-  @media (max-width: 480px) {
-    .container {
-      width: 100vw;
-    }
-  
-    .panel:nth-of-type(4),
-    .panel:nth-of-type(5) {
-      display: none;
-    }
-  }
+}
+
 
 /*******************
 Work History
 *******************/
 .exp{
-  
+  background-color: blue;
+ 
+}
+
+.job{
+  margin-top: 50px;
+  background-color: orange;
 }
