--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -42,6 +42,18 @@ h2{
   font-size: 2em;
   text-align: center;
 }
+@keyframes hidetoshow{
+  0%{
+      opacity: 0%;
+  }
+  50{
+      opacity: 50%;
+  }
+  100{
+      opacity: 100%;
+  }
+  
+}
 /***
 Nav Bar
 ***/
@@ -52,12 +64,13 @@ nav{
     height: 20%;
     display: inline;
     z-index: auto;
+    font-size: 20px;
 
 }
 
 nav ul{
     text-align: center;
-    font-size:25px;
+
     margin-top: 0px;
 }
 
@@ -95,6 +108,8 @@ Hero
     transform: translateY(-40%);
     left:50%;
     transform: translateX(-50%);
+    animation-name: hidetoshow;
+    animation-duration: 3s;
 }
 
 .hero h1{
@@ -131,10 +146,12 @@ Projects
   margin: 10px;
   margin-top: 75px;
   position: relative;
+  
+}
+.panel .anime{
   -webkit-transition: all 700ms ease-in;
 
 }
-
 .panel h3 {
   font-size: 35px;
   font-weight: 100;
