fix nav bar to liking, animation sort of complete

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -42,7 +42,7 @@ h1{
   font-weight: bold;
 }
 h2{
-  margin-top: 20px;
+
   font-weight: bold;
   font-size: 2em;
   text-align: center;
@@ -59,31 +59,59 @@ h2{
   }
   
 }
+
+@keyframes clickme{
+  0%{
+    top: 0;
+  }
+  25%{
+  }
+  50%{
+    top: 75%;
+    opacity: .50;
+  }
+  75%{
+    opacity: .75;
+  }
+  100%{
+    opacity: 1;
+
+  }
+}
+
 /***
 Nav Bar
 ***/
-nav{
-    position: relative;
+.nav{
+    position: absolute;
+    display: inline;
     width: 100%;
-    top: 10px;
-    height: 20%;
+    height: 40px;
     display: inline;
-    z-index: auto;
     font-size: 20px;
-
+    background-color: #f5e08f;
+    top:0
 }
 
-nav ul{
-    text-align: center;
-
-    margin-top: 0px;
+.nav ul{
+    text-align: left;
+    margin-top: 5px;
 }
 
-nav ul li{
+.nav ul li{
     display: inline;
-    margin-right: 5%;
-
-    
+    margin-right: 15px;   
+}
+.nav ul li{
+  display: inline;
+  margin-right: 15px;   
+}
+.nav ul li:hover{
+  font-weight: bold;
+  margin-right: 25px;
+}
+.nav ul li:last-child{
+  float: right;
 }
 
 /************
@@ -93,6 +121,10 @@ left and right
 #left,#right{
     position: fixed;
     z-index: 0;
+    height: 40px;
+    width: 40px;
+    animation-name: clickme;
+    animation-duration: 2s;
 }
 #left{
     top:50%;
@@ -161,6 +193,10 @@ Projects
   position: relative;
 }
 
+.panel:hover{
+  flex:1;
+}
+
 .panel h3 {
   font-size: 35px;
   font-weight: 100;
@@ -169,6 +205,7 @@ Projects
   left: 20px;
   margin: 0;
   opacity: 0;
+  
 }
 
 .panel h3 a:visited{
@@ -176,11 +213,12 @@ Projects
 }
 .panel.active {
   flex: 5;
+  transition: opacity 0.3s ease-in 0.3s;
 }
 
 .panel.active h3 {
   opacity: 1;
-  transition: opacity 0.3s ease-in 0.4s;
+  transition: opacity 0.3s ease-in 0.3s;
 }
 
 
