--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -96,16 +96,14 @@ Nav Bar
 .nav ul{
     text-align: left;
     margin-top: 5px;
+    margin-left: 25px;
 }
 
 .nav ul li{
     display: inline;
     margin-right: 15px;   
 }
-.nav ul li{
-  display: inline;
-  margin-right: 15px;   
-}
+
 .nav ul li:hover{
   font-weight: bold;
   margin-right: 25px;
@@ -113,6 +111,14 @@ Nav Bar
 .nav ul li:last-child{
   float: right;
 }
+
+.nav ul li a {
+  text-decoration: none;
+}
+.nav ul li a:hover {
+  text-decoration: underline;
+}
+
 
 /************
 left and right
@@ -213,7 +219,6 @@ Projects
 }
 .panel.active {
   flex: 5;
-  transition: opacity 0.3s ease-in 0.3s;
 }
 
 .panel.active h3 {
