--- a/style.css
+++ b/style.css
@@ -121,5 +121,41 @@ type position under my name
 .bsod{
 	background-position: center top;
 	background-image: url("img/BSOD2.png");
-	
 }
+
+/*Projects*/
+
+.folder{
+
+	width: 420px;
+	height: 310px;
+	margin: 10em auto 10em;
+  
+	border-radius: 5px 25px 25px 25px;
+	filter: drop-shadow(0 0 0.75rem grey);
+  
+	background: white;
+	position: relative;
+  }
+  
+  .folder::before{
+	  content:  '';
+	  position: absolute;
+	  top: -18px;
+	  width: 200px;
+	  height: 25px;
+	  background: white;
+	  border-radius: 25px 0 0 0;
+	  clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
+  }
+  .folder::after{
+	content: '';
+	position: absolute;
+	left:  40px;
+	width: 85px;
+	height: 5px;
+	top: -18px;
+	background: #7036E9;
+	border-radius: 0 0 5px 5px;
+  
+  }
